# data-streams-sdk

./: .gitignore  Makefile  PUBLISH.md  README.md
.github/: CODEOWNERS
.github/workflows/: go-tests.yml  publish-rust-report-crate.yml  publish-rust-sdk-crate.yml  publish-ts-sdk.yml
go/: README.md  auth.go  auth_test.go  client.go  client_test.go  config.go  doc.go  endpoints.go  example_test.go  go.mod  go.sum  stream.go  stream_test.go
go/feed/: README.md  doc.go  feed.go  feed_test.go
go/report/: README.md  doc.go  example_test.go  report.go  report_test.go
go/report/common/: marketstatus.go
go/report/v1/: data.go  data_test.go
go/report/v10/: data.go  data_test.go
go/report/v11/: data.go  data_test.go
go/report/v12/: data.go  data_test.go
go/report/v13/: data.go  data_test.go
go/report/v2/: data.go  data_test.go
go/report/v3/: data.go  data_test.go
go/report/v4/: data.go  data_test.go
go/report/v5/: data.go  data_test.go
go/report/v6/: data.go  data_test.go
go/report/v7/: data.go  data_test.go
go/report/v8/: data.go  data_test.go
go/report/v9/: data.go  data_test.go
rust/: Cargo.toml  README.md  book.toml
rust/benches/: rest_benchmark.rs  stream_benchmark.rs
rust/crates/report/: Cargo.toml
rust/crates/report/.github/workflows/: publish-rust-report-crate.yml
rust/crates/report/examples/: decode_report_data.rs  decode_report_data_v9.rs
rust/crates/report/src/: feed_id.rs  lib.rs  report.rs
rust/crates/report/src/report/: base.rs  compress.rs  v1.rs  v10.rs  v11.rs  v12.rs  v13.rs  v2.rs  v3.rs  v4.rs  v5.rs  v6.rs  v7.rs  v8.rs  v9.rs
rust/crates/sdk/: Cargo.toml
rust/crates/sdk/.github/workflows/: publish-rust-sdk-crate.yml  publish-sdk.yml
rust/crates/sdk/benches/: rest_benchmark.rs  stream_benchmark.rs
rust/crates/sdk/examples/: compress_report.rs  get_feeds.rs  get_latest_report.rs  get_report.rs  get_reports_bulk.rs  get_reports_page.rs  get_reports_page_with_limit.rs  wss_multiple.rs  wss_simple_stream.rs
rust/crates/sdk/src/: auth.rs  client.rs  config.rs  endpoints.rs  feed.rs  lib.rs  stream.rs
rust/crates/sdk/src/stream/: establish_connection.rs  monitor_connection.rs
rust/crates/sdk/tests/: stream_integration_tests.rs
rust/crates/sdk/tests/utils/: mock_websocket_server.rs
rust/docs/: SUMMARY.md  introduction.md
rust/docs/examples/: README.md  compress_report.md  decode_report_data.md  get_feeds.md  get_latest_report.md  get_report.md  get_reports_bulk.md  get_reports_page.md  get_reports_page_with_limit.md  wss_multiple.md  wss_simple_stream.md
rust/docs/guides/: README.md  eip7412.md  foundry.md  solana.md
rust/examples/: compress_report.rs  decode_report_data.rs  get_feeds.rs  get_latest_report.rs  get_report.rs  get_reports_bulk.rs  get_reports_page.rs  get_reports_page_with_limit.rs  wss_multiple.rs  wss_simple_stream.rs
rust/src/: auth.rs  client.rs  config.rs  endpoints.rs  feed.rs  lib.rs  report.rs  stream.rs
rust/src/report/: compress.rs  mod.rs  v1.rs  v2.rs  v3.rs  v4.rs
rust/src/stream/: establish_connection.rs  monitor_connection.rs
typescript/: .editorconfig  .env.example  .prettierignore  .prettierrc.json  LICENSE  README.md  eslint.config.mjs  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/examples/: README.md  get-latest-report.ts  get-report-by-timestamp.ts  get-reports-bulk.ts  get-reports-page.ts  list-feeds.ts  logging-basic.ts  metrics-monitoring.ts  stream-reports.ts
typescript/src/: defaultConfig.ts  index.ts
typescript/src/client/: base.ts  implementation.ts  index.ts
typescript/src/decoder/: implementation.ts  index.ts
typescript/src/stream/: connection-manager.ts  deduplication.ts  index.ts  stats.ts
typescript/src/types/: client.ts  errors.ts  index.ts  logger.ts  metrics.ts  report.ts
typescript/src/utils/: auth.ts  constants.ts  index.ts  logger.ts  origin-discovery.ts  report.ts  time.ts  validation.ts
typescript/tests/: setup.ts
typescript/tests/features/: error-handling.test.ts  ha-client-features.test.ts
typescript/tests/integration/: client.integration.test.ts  context-cancellation.test.ts  ha-deduplication.test.ts  ha-dynamic-reconnection.test.ts  ha-mode.integration.test.ts  stream.integration.test.ts  websocket-cleanup.test.ts
typescript/tests/unit/decoder/: decoder.test.ts
typescript/tests/unit/stream/: deduplication.test.ts  exponential-backoff.test.ts  stream-stats.test.ts
typescript/tests/unit/stream/connection-manager/: auth-handshake.test.ts  cleanup.test.ts  connection-manager.test.ts  health.test.ts  max-attempts.test.ts  partial-failure.test.ts  status-callback.test.ts
typescript/tests/unit/stream/stream/: events.test.ts  read.test.ts  terminal.test.ts
typescript/tests/unit/utils/: auth.test.ts  logger.test.ts  origin-discovery.test.ts
typescript/tests/unit/utils/validation/: config-validation.test.ts  feed-validation.test.ts  report-validation.test.ts
typescript/tests/utils/: mockWebSocketServer.ts
