[package]
name = "data-streams-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Chainlink Data Streams client SDK"
license = "MIT"
repository = "https://github.com/smartcontractkit/data-streams-sdk/"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
alloy = { version = "0.5", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
