[package]
name = "data-streams-sdk"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"
description = "Chainlink Data Streams client SDK"
license = "MIT"
repository = "https://github.com/smartcontractkit/data-streams-sdk/"
keywords = ["chainlink"]

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
tokio = { version = "1.4", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls"] }
futures = "0.3"
futures-util = "0.3"
alloy = { version = "0.4", features = ["full"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
byteorder = "1.4"
snap = "1"
thiserror = "1.0"
zeroize = "1.5"
tracing = { version = "0.1.40", optional = true }

[features]
default = ["tracing"]

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["time"] }
