[package]
name = "data-streams-sdk"
version = "0.0.1"
edition = "2021"
rust-version = "1.70"
description = "Chainlink Data Streams client SDK"
license = "MIT"
repository = "https://github.com/smartcontractkit/data-streams-sdk"
readme = "README.md"
exclude = ["/target/*", "examples/*", "tests/*", "docs/*", "book/*"]
keywords = ["chainlink"]

[dependencies]
data-streams-report = { git = "https://github.com/smartcontractkit/data-streams-sdk.git", subdir = "rust/crates/report" }
reqwest = { version = "0.12.8", features = ["json", "rustls-tls"] }
tokio = { version = "1.4", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = [
    "rustls-tls-native-roots",
] }
futures = "0.3"
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
byteorder = "1.4"
thiserror = "1.0"
zeroize = "1.5"
tracing = { version = "0.1.40", optional = true }

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["time"] }
criterion = { version = "0.5", features = ["async_tokio"] }
dotenv = "0.15"

[features]
default = ["full"]

rest = ["reqwest/json", "reqwest/rustls-tls", "tokio/full"]
websocket = ["tokio-tungstenite/rustls", "tokio/full"]
tracing = ["dep:tracing"]

full = ["rest", "websocket", "tracing"]

[package.metadata.docs.rs]
all-features = true

[[bench]]
name = "rest_benchmark"
harness = false

[[bench]]
name = "stream_benchmark"
harness = false
